internal/modules/overview/testdata/rs-pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: 2018-10-29T15:34:07Z
  generateName: rs1-
  labels:
    app: myapp
    pod-template-hash: "2350241137"
  name: rs1-s8mj8
  namespace: default
  ownerReferences:
    - apiVersion: extensions/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: rs1
      uid: ac833d23-c17e-11e8-9212-025000000001
  resourceVersion: "5616847"
  selfLink: /api/v1/namespaces/default/pods/rs1-s8mj8
  uid: 12dde864-db90-11e8-9230-025000000001
spec:
  containers:
    - image: nginx:1.13.6
      imagePullPolicy: IfNotPresent
      name: nginx
      ports:
        - containerPort: 80
          protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: default-token-6c577
          readOnly: true
  dnsPolicy: ClusterFirst
  nodeName: node1
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - name: default-token-6c577
      secret:
        defaultMode: 420
        secretName: default-token-6c577
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: 2018-10-29T15:34:07Z
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: 2018-10-29T15:34:09Z
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: 2018-10-29T15:34:07Z
      status: "True"
      type: PodScheduled
  containerStatuses:
    - containerID: docker://efea6716652198f4b58f7e50de9a13f59dbb49f00b14925f777f24a3691a59ec
      image: nginx:1.13.6
      imageID: docker-pullable://nginx@sha256:9fca103a62af6db7f188ac3376c60927db41f88b8d2354bf02d2290a672dc425
      lastState: {}
      name: nginx
      ready: true
      restartCount: 0
      state:
        running:
          startedAt: 2018-10-29T15:34:09Z
  hostIP: 192.168.65.3
  phase: Running
  podIP: 10.1.114.100
  qosClass: BestEffort
  startTime: 2018-10-29T15:34:07Z
